# Exam

./: CMakeLists.txt  checkmate.h  main.c  main.h
brainfuck/: brainfuck.c  brainfuck.h
checkmate/: check_mate.c
ft_list_foreach/: ft_list.h
